--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "embla-carousel": "^8.0.0",
+    "embla-carousel-autoplay": "^8.0.0",
     "embla-carousel-react": "^8.0.0",
     "lucide-react": "^0.341.0",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
+    "next-videos": "^1.4.1",
     "react": "^18",
     "react-dom": "^18",
     "sharp": "^0.33.2",
